<resources>
    <string name="app_name">Fixer</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="usd">USD $</string>
    <string name="inr">INR \u20B9</string>
    <string name="one">1</string>
    <string name="convert">Convert</string>
    <string name="Reverse">Reverse</string>
    <string name="Reset">Reset rates</string>
    <string name="Refresh">Refresh rates</string>
</resources>
