<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.devendra.Fixer.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/fab_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:id="@+id/usd_section">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty_dp"
                android:text="@string/usd"
                android:gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/five_dp"
                android:paddingBottom="@dimen/five_dp"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:id="@+id/usd_label"
                android:background="@color/bluegrey_300"/>

            <EditText
                android:layout_width="@dimen/two_eighty_dp"
                android:layout_height="wrap_content"
                android:id="@+id/usd"
                android:layout_toRightOf="@+id/usd_label"
                android:text="@string/one"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:gravity="end|center_vertical"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_toEndOf="@+id/usd_label"
                android:layout_marginStart="@dimen/five_dp" />

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reverse_rate_btn"
            android:text="@string/Reverse"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/usd_section"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:layout_below="@id/reverse_rate_btn"
            android:id="@+id/inr_section">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/thirty_dp"
                android:text="@string/inr"
                android:gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/ten_dp"
                android:paddingTop="@dimen/five_dp"
                android:paddingBottom="@dimen/five_dp"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:id="@+id/inr_label"
                android:background="@color/bluegrey_300"/>

            <EditText
                android:layout_width="@dimen/two_eighty_dp"
                android:layout_height="wrap_content"
                android:id="@+id/inr"
                android:layout_toRightOf="@+id/inr_label"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:gravity="end|center_vertical"
                android:layout_marginLeft="@dimen/five_dp"
                android:layout_toEndOf="@+id/inr_label"
                android:layout_marginStart="@dimen/five_dp" />

        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert"
            android:id="@+id/convert_btn"
            android:layout_below="@+id/inr_section"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_rate_btn"
            android:text="@string/Reset"
            android:layout_below="@+id/convert_btn"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reset_rate_btn"
            android:src="@drawable/fixer_money"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
